
NOT TO BE RELEASED YET (need more testing)

------------------------------------------
- add your changes -
<!-- ============================================================================= -->
<!-- ====================== NOT-TESTED HEAD RELEASES ============================= -->

0.8.1.3; 17 Nov 2008
rudi: making referenceChecker available again, was forgotten in new config

0.8.1.2; 12 Nov 2008
rudi: fixed build.xml for configuration
rudi: correctly generating TLD 
manu: fix with form-graph, increasing max of 20 forms

0.8.1.1; 23 Oct 2008
cristi/rudi: fixed a bug with LEFT JOIN and ptrOne
rudi: several fixes on changed paths for developer tools
manu: link to start file relation crawling from source code viewers

0.8.1.0; 5 Oct 2008
cristi: support for automatic left join for SELECT or WHERE expressions that contain nullable pointers.
cristi: we don't transform JSP orderby and groupby expressions in select expressions any longer, because the ComposedQuery code for that is very limited and does not allow for complex expressions, subqueries, etc. pages seem to work without it anyway
rudi: allowing validation definition in subsets
rudi: adding more SQL functions to MQL
rudi: refactoring servlets into controller handler, small fixes on various developer support tools
rudi: adding links from developer tools to other developer tools
rudi: fixing a bug with session variables of type Map
marius: removing need for empty BL methods

0.8.0.8 ; 20 Aug 2008
cristi: support for subqueries including any(subquery), all (subquery), in(subquery), exists(subquery), some(subquery) and subqueries in expressions 
cristi: correlation of subquery with the superquery 
cristi: not accepting AS identifiers in WHERE
cristi: optimization of joins
cristi: support for elements(), size(), maxelement(), minelement()
cristi: optional support for : parameters in mql queries, configured by acceptColonParams=true
cristi: mql independence from hibernate.jar
rudi: small fixes for file data type
