@@ -18,6 +18,7 @@ NOT TO BE RELEASED YET (need more testing)
 
 0.8.1.3; 17 Nov 2008
 rudi: making referenceChecker available again, was forgotten in new config
+rudi: line-viewer more robust on file-relations display
 
 0.8.1.2; 12 Nov 2008
 rudi: fixed build.xml for configuration
